@@ -29,6 +29,7 @@
 	* Regeneration only causes additional hunger when injured (by Adeon)
 	* Reinstated vanilla behavior for cursed scrolls of gold detection and
 	  adding some traps to the planes
+	* The Oracle can identify objects for a fee (based on the patch by Pasi Kallinen)
 
 	* New config option for customizing monster letter in UTF8graphics:
 	  MONSTERSYMBOL='horse':U+0127 # latin small letter h with stroke
